[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Pablo Anastacio Mora Chatski <pmora1990@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"

[tool.poetry.scripts]
my-script = "poetry_demo:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
